<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="option_menu_settings">Settings</string>
    <string name="settings_language">Language</string>
    <string-array name="settings_languages">
        <item>English</item>
        <item>中文</item>
    </string-array>
    <string-array name="settings_language_codes">
        <item>en</item>
        <item>zh</item>
    </string-array>
    <string name="settings_difficulty">Difficulty</string>
    <string name="settings_difficulty_level_1">Level 1</string>
    <string name="settings_difficulty_level_2">Level 2</string>
    <string name="settings_difficulty_level_3">Level 3</string>
    <string-array name="settings_difficulties">
        <item>@string/settings_difficulty_level_1</item>
        <item>@string/settings_difficulty_level_2</item>
        <item>@string/settings_difficulty_level_3</item>
    </string-array>
    <string name="settings_first_hand">First Hand</string>
    <string name="settings_first_hand_you">You</string>
    <string name="settings_first_hand_computer">Computer</string>
    <string name="settings_first_hand_random">Random</string>
    <string-array name="settings_first_hand_options">
        <item>@string/settings_first_hand_you</item>
        <item>@string/settings_first_hand_computer</item>
        <item>@string/settings_first_hand_random</item>
    </string-array>
    <string name="settings_reset_score">Reset Score</string>
    <string name="settings_save">Save</string>
    <string name="settings_cancel">Cancel</string>

    <string name="option_menu_about">About</string>
    <string name="about_title"><u>Welcome to Tic Tac Toe!</u></string>
    <string name="about_guide">Win by placing three of your marks(X) in a horizontal, vertical, or diagonal row.</string>
    <string name="about_levels">There are 3 levels to choose from, the higher the level, the smarter the computer plays.</string>
    <string name="about_find_out_more">Find out more in the following link.</string>
    <string name="about_url">https://en.wikipedia.org/wiki/Tic-tac-toe</string>
    <string name="about_ok">Ok</string>

    <string name="option_menu_quit">Quit</string>

    <string name="score_board">Score Board</string>
    <string name="player">You</string>
    <string name="computer">Computer</string>
    <string name="draw">Draw</string>

    <string name="player_goes_first_text">You go first.</string>
    <string name="android_turn_text">It\'s Android\'s turn.</string>
    <string name="player_turn_text">It\'s your turn (X).</string>
    <string name="game_tie_text">It\'s a tie!</string>
    <string name="player_won_text">You won!</string>
    <string name="android_won_text">Android won!</string>

    <string name="start_a_new_game">Start a new game</string>

    <string name="player_string" translatable="false">player</string>
    <string name="computer_string" translatable="false">computer</string>
    <string name="draw_string" translatable="false">draw</string>

</resources>