<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/option_menu_settings"
        android:title="@string/option_menu_settings"
        android:icon="@drawable/option_menu_settings"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/option_menu_about"
        android:title="@string/option_menu_about"
        android:icon="@drawable/option_menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_menu_exit"
        android:title="@string/option_menu_quit"
        app:showAsAction="never"
        />

</menu>