<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scoreboard_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/design_default_color_on_primary"
            android:theme="@style/FontSize.Small"
            android:text="@string/score_board"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/player_win_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:text="@string/player"/>

                <TextView
                    android:id="@+id/player_win_count_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/computer_win_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_red"
                    android:text="@string/computer"/>

                <TextView
                    android:id="@+id/computer_win_count_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/draw_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_blue"
                    android:text="@string/draw"/>

                <TextView
                    android:id="@+id/draw_count_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button0"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="1"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="2"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="3"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="4"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="5"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="6"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="7"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="8"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:text="9"
                android:onClick="onButtonClicked"
                android:textSize="50sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_centerInParent="true"
                android:text="info"
                android:textSize="20sp" >
            </TextView>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/information"
                android:indeterminate="true"
                android:visibility="gone"/>

        </RelativeLayout>

        <Button
            android:id="@+id/button_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/start_a_new_game"
            android:textSize="20sp"
            android:onClick="newGame" >
        </Button>

    </LinearLayout>

</LinearLayout>